Add rest apis to retrieve unloaded indices and to get project and freelancer data with an id or vector id
